--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robots",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/jbuican14/react-Robot.git",
+  "homepage": "https://jbuican14.github.io/react-Robot.git",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
